hphp/test/zend/good/ext/spl/tests/SplQueue_setIteratorMode_param_lifo.php
<?php

try {

	$dll = new SplQueue();
	$dll->setIteratorMode(SplDoublyLinkedList::IT_MODE_LIFO);

} catch (Exception $e) {
	echo $e->getMessage();
}

?>