hphp/test/zend/bad/ext/phar/tests/002.php
<?php
try {
Phar::mapPhar(5, 'hio', 'hi');

Phar::mapPhar();
} catch (Exception $e) {
	echo $e->getMessage();
}
__HALT_COMPILER(); ?>